--- a/contato.css
+++ b/contato.css
@@ -1,8 +1,13 @@
-body {
-  color: #48ff00;
-  font-size: 16px;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
 }
-
+body{
+  color: #48ff00;
+}
 header div a{
 color: black;
 text-decoration: none;
@@ -13,20 +18,15 @@ color: #ffffff;
 text-decoration: none;
 display: inline-block;
 transition: 0.5s;
-
+}
+form{
+  padding: 16%;
+  align-items: center;
 }
 
 h1, p {
   margin: 1em auto;
   text-align: center;
-}
-
-form {
-  width: 60vw;
-  max-width: 500px;
-  min-width: 300px;
-  margin: 0 auto;
-  padding-bottom: 2em;
 }
 
 fieldset {
